--- a/views/mainView.pug
+++ b/views/mainView.pug
@@ -1,5 +1,12 @@
 extends base
 
 block content
-	.main 
-		.title Klasskassa 5A
+	.main
+		.card
+			.title Klasskassa 5A
+			.amount
+				img(src="img/money.png")
+				span 1000kr/35000kr
+			.progress-container
+				.progress 20%
+			.details Senast uppdaterad 2023-05-12 08:12
