--- a/public/css/style.css
+++ b/public/css/style.css
@@ -14,7 +14,7 @@ body {
     rgb(32, 38, 57) 11.4%,
     rgb(63, 76, 119) 70.2%
   );
-  height: 95%;
+  height: 100%;
   font-size: 20px;
 }
 
@@ -31,8 +31,12 @@ body {
   font-weight: bolder;
 }
 
+.money-img {
+  height: 150%;
+  width: auto;
+}
+
 .card {
-  height: 20%;
   background-color: white;
   width: 80%;
   border-radius: 10px;
@@ -47,26 +51,40 @@ body {
   gap: 0.75rem;
 }
 
-.amount {
-  align-self: flex-start;
-}
-
 .progress-container {
   background-color: #f1f1f1;
   width: 100%;
-  height: 1rem;
+  height: 1.5rem;
+  border-radius: 10px;
 }
 
 .progress {
-  width: 20%;
+  width: 40%;
   height: 100%;
-  background-color: red;
+  background-color: #5998c5;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: center;
   color: whitesmoke;
-  padding: 0.2rem;
+  padding: 0rem;
+  border-radius: 10px;
+  overflow: visible;
+}
+
+.amount {
+  width: 80%;
+  align-self: flex-start;
+}
+
+.amount-detail {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.under-title {
+  font-weight: bold;
 }
 
 .details {
