--- a/public/css/style.css
+++ b/public/css/style.css
@@ -32,7 +32,7 @@ body {
 }
 
 .money-img {
-  height: 150%;
+  height: 18px;
   width: auto;
 }
 
@@ -59,17 +59,17 @@ body {
 }
 
 .progress {
-  width: 40%;
+  width: 4%;
   height: 100%;
   background-color: #5998c5;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-  color: whitesmoke;
-  padding: 0rem;
   border-radius: 10px;
-  overflow: visible;
+  display: flex;
+}
+
+.progress-percent {
+  margin: auto;
+  width: 10px;
+  font-weight: bolder;
 }
 
 .amount {
