--- a/public/css/style.css
+++ b/public/css/style.css
@@ -59,11 +59,14 @@ body {
 }
 
 .progress {
-  width: 4%;
   height: 100%;
   background-color: #5998c5;
   border-radius: 10px;
   display: flex;
+  animation-duration: 5s;
+  animation-name: showprogress;
+  animation-iteration-count: 1;
+  animation-direction: normal;
 }
 
 .progress-percent {
