--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,12 +9,10 @@
 
 html,
 body {
-  background: linear-gradient(
-    112.1deg,
-    rgb(32, 38, 57) 11.4%,
-    rgb(63, 76, 119) 70.2%
-  );
-  height: 100%;
+  background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+  background-size: 400% 400%;
+  animation: gradient 15s ease infinite;
+  height: 100vh;
   font-size: 20px;
 }
 
@@ -93,4 +91,19 @@ body {
 .details {
   font-style: italic;
   font-size: small;
+}
+
+body {
+}
+
+@keyframes gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
 }
