--- a/views/mainView.pug
+++ b/views/mainView.pug
@@ -6,7 +6,7 @@ block content
 			.title Klasskassa 5A
 			//- img.money-img(src="img/money.png")
 			script(src="https://cdn.lordicon.com/lordicon-1.3.0.js")
-			lord-icon(src="https://cdn.lordicon.com/noregfgy.json" trigger="in" delay="200" style="width:90px;height:90px")
+			lord-icon(src="https://cdn.lordicon.com/noregfgy.json" trigger="loop" delay="3500"  style="width:90px;height:90px")
 			.progress-container
 				.progress(style="width: " +(balance/goal) * 100+ "%; ")
 					.progress-percent #{Math.round((balance/goal) * 100)}%
